Fixed login/sign up views not being centered properly resulting in dodgy badness on small mobile screens

--- a/BankingApp/wwwroot/css/home.css
+++ b/BankingApp/wwwroot/css/home.css
@@ -1,12 +1,8 @@
 ﻿/* Home Menu
 -------------------------------------------------- */
 .bank-account-container {
-    display: block;
-    left: 0;
-    right: 0;
-    top: 0;
-    bottom: 0;
-    margin: auto;
+    margin: 0 auto;
+    margin-top: 5px;
     max-width: 500px;
     padding: 10px;
 }
@@ -30,12 +26,7 @@
 }
 
 .form-container {
-    display: block;
-    left: 0;
-    right: 0;
-    top: 0;
-    bottom: 0;
-    margin: auto;
+    margin: 0 auto;
     max-width: 500px;
     padding: 10px;
     background-color: white;
