--- a/BankingApp/wwwroot/css/login.css
+++ b/BankingApp/wwwroot/css/login.css
@@ -2,22 +2,17 @@
 -------------------------------------------------- */
 
 .login-container {
-    display: block;
     position: absolute;
-    left: 0;
-    right: 0;
-    top: 0;
-    bottom: 0;
-    margin: auto;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     min-width: 300px;
     max-width: 500px;
     width: 25%;
-    height: 50%;
 }
 
 .login-form-container {
     background-color: white;
-    display: block;
     border-style: solid;
     border-width: 2px;
     border-radius: 15px;
